hphp/hack/test/typecheck/typing_fail_abstract.php
<?hh
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

// Abstract method with body

abstract class A {
  abstract public function f(): int {
    return 0;
  }
}
